sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value debut
 debut=0; fin=getNombreValeurs()-2
 ^AlgCocktailSort2:4: error: not found: value fin
 debut=0; fin=getNombreValeurs()-2
          ^AlgCocktailSort2:7: error: not found: value a
    a=false
    ^AlgCocktailSort2:9: error: not found: value debut
  for (i <- debut to fin){
            ^AlgCocktailSort2:9: error: not found: value fin
  for (i <- debut to fin){
                     ^AlgCocktailSort2:12: error: not found: value fin
      fin=fin-1
      ^AlgCocktailSort2:13: error: not found: value a
      a=true
      ^AlgCocktailSort2:16: error: not found: value debut
  while (k>=debut){
            ^AlgCocktailSort2:19: error: not found: value debut
      debut=debut+1
      ^AlgCocktailSort2:20: error: not found: value a
      a=true
      ^AlgCocktailSort2:26: error: not found: value a
  while (a)
         ^