sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  
 debut=0; fin=getNombreValeurs()-2
  
  do {
    a=false
  var k=getNombreValeurs()-2
  for (i <- debut to fin){
    if (plusPetit(i+1,i)){
      echange(i,i+1)
      fin=fin-1
      a=true
    }
  }
  while (k>=debut){
    if (plusPetit(k+1,k)){
      echange(k,k+1)
      debut=debut+1
      a=true
    }
    k=k-1
  
  }
}
  while (a)
}